--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
 						<img src="ico/leancloud.ico"/>
 						<span class="hSiteName">Leancloud</span>
 					</a> 
-					<a href="https://yrxlzgcxdskm.leanapp.cn/" class="hSite" target="_blank">
+					<a href="https://c.luziyang.cn/" class="hSite" target="_blank">
 						<img src="ico/leancloud.ico"/>
 						<span class="hSiteName">博客评论管理</span>
 					</a> 
