--- a/index.html
+++ b/index.html
@@ -660,7 +660,10 @@
 					</a> 
 				</div>
 				<div class="hSiteLine"><!--第三行-->
-				
+					<a href="https://photos.google.com/" class="hSite" target="_blank">
+						<img src="ico/ggxc.png"/>
+						<span class="hSiteName">谷歌相册</span>
+					</a> 
 				</div>
 				<div class="hSiteLine"><!--第四行-->
 					
