--- a/index.html
+++ b/index.html
@@ -454,6 +454,10 @@
 						<img src="ico/muke.ico"/>
 						<span class="hSiteName">慕课网</span>
 					</a>
+					<a href="https://xue.youdao.com/" class="hSite" target="_blank">
+						<img src="ico/ydjpk.ico"/>
+						<span class="hSiteName">有道精品课</span>
+					</a>
 				</div>
 				<div class="hSiteLine"><!--第二行-->
 					
@@ -482,6 +486,18 @@
 						<img src="ico/vip1280.ico"/>
 						<span class="hSiteName">VIP电影</span>
 					</a>
+					<a href="https://photos.google.com/" class="hSite" target="_blank">
+						<img src="ico/ggxc.png"/>
+						<span class="hSiteName">谷歌相册</span>
+					</a> 
+					<a href="https://www.youtube.com/" class="hSite" target="_blank">
+						<img src="ico/youtube.png"/>
+						<span class="hSiteName">Youtube</span>
+					</a> 
+					<a href="https://www.google.com/" class="hSite" target="_blank">
+						<img src="ico/ggss.ico"/>
+						<span class="hSiteName">谷歌搜索</span>
+					</a> 
 				</div>
 				<div class="hSiteLine"><!--第二行-->
 					
@@ -660,9 +676,17 @@
 					</a> 
 				</div>
 				<div class="hSiteLine"><!--第三行-->
-					<a href="https://photos.google.com/" class="hSite" target="_blank">
-						<img src="ico/ggxc.png"/>
-						<span class="hSiteName">谷歌相册</span>
+					<a href="https://analytics.google.com/" class="hSite" target="_blank">
+						<img src="ico/ggtj.png"/>
+						<span class="hSiteName">谷歌统计</span>
+					</a> 
+					<a href="https://www.google.com/adsense/" class="hSite" target="_blank">
+						<img src="ico/gggg.ico"/>
+						<span class="hSiteName">谷歌广告</span>
+					</a> 
+					<a href="https://www.screensizemap.com/" class="hSite" target="_blank">
+						<img src="ico/pmcc.png"/>
+						<span class="hSiteName">屏幕尺寸</span>
 					</a> 
 				</div>
 				<div class="hSiteLine"><!--第四行-->
