--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
 	<!--IT推荐站-->
 			<div class="hSiteBox hItsite">
 				<div class="hSiteLine"><!--第一行-->
-					<a href="https://github.com/" class="hSite" target="_blank" >
+					<a href="https://github.com/login" class="hSite" target="_blank" >
 						<img src="ico/github.ico"/>
 						<span class="hSiteName">github</span>
 					</a>	
@@ -687,7 +687,7 @@
 						<img src="ico/pmcc.png"/>
 						<span class="hSiteName">屏幕尺寸</span>
 					</a> 
-					<a href="https://luziyang.coding.net/signin" class="hSite" target="_blank">
+					<a href="https://coding.net/login" class="hSite" target="_blank">
 						<img src="ico/coding.ico"/>
 						<span class="hSiteName">Coding</span>
 					</a> 
