--- a/index.html
+++ b/index.html
@@ -695,7 +695,10 @@
 						<img src="ico/aliyun.ico"/>
 						<span class="hSiteName">阿里云解析</span>
 					</a> 
-					
+					<a href="http://tool.mkblog.cn/" class="hSite" target="_blank">
+						<img src="ico/mktool.ico"/>
+						<span class="hSiteName">孟坤工具箱</span>
+					</a> 
 				</div>
 				<div class="hSiteLine"><!--第四行-->
 					
