--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 						<img src="ico/yun.ico"/>
 						<span class="hSiteName">私人云盘</span>
 					</a>
-					<a href="https://law.luziyang.cn/" class="hSite" target="_blank" >
-						<img src="ico/lawlzy.ico"/>
-						<span class="hSiteName">法考笔记</span>
+					<a href="https://music.163.com" class="hSite" target="_blank" >
+						<img src="ico/163music.ico"/>
+						<span class="hSiteName">网易云音乐</span>
 					</a>
 					<a href="https://weibo.com/" class="hSite" target="_blank" >
 						<img src="ico/weibo.ico"/>
@@ -701,7 +701,10 @@
 					</a> 
 				</div>
 				<div class="hSiteLine"><!--第四行-->
-					
+					<a href="https://tool.lu" class="hSite" target="_blank">
+						<img src="ico/tool.ico"/>
+						<span class="hSiteName">在线工具</span>
+					</a> 
 				</div>
 				
 			</div>
