--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<dd class="hNav hGongjuBtn">工具</dd>
 			<dd class="hNav hItsiteBtn">站长</dd>
 			<dd class="hNav hQuzhanBtn">效率</dd>
-			<dd class="hNav htuku">图库</dd>
+			<dd class="hNav hTukuBtn">图库</dd>
 			
 		</dl>
 <!--综合-->
@@ -144,7 +144,10 @@
 						<img src="ico/weibo.ico"/>
 						<span class="hSiteName">微博</span>
 					</a>
-
+					<a href="https://ziyuan.baidu.com/" class="hSite" target="_blank" >
+						<img src="ico/baidu.ico"/>
+						<span class="hSiteName">百度站长</span>
+					</a>
 				</div>
 				
 				<div class="hSiteLine"><!--第三行-->
@@ -733,7 +736,7 @@
 				
               </div>
 <!--图库-->
-			<div class="hSiteBox htuku">
+			<div class="hSiteBox hTuku">
 				<div class="hSiteLine"><!--第一行-->
 					<a href="https://www.yuque.com/dashboard" class="hSite" target="_blank">
 						<img src="ico/yuque.png"/>
