--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta name="description" content="网址导航是一个轻导航网站，提供一个清爽干净的上网入口。清爽界面，简约导航，希望大家能有一个好的上网浏览心情，以及便捷的网址导航体验。" />
 	<link type="text/css" rel='stylesheet' href="moulem.css?version=18.14">
 	<script src='https://libs.baidu.com/jquery/1.9.0/jquery.js' type='text/javascript'></script>
-	<script type="text/javascript" src='keyword.js?version=18.13'></script>
-	<script type="text/javascript" src='moulem.js?version=18.13'></script>
+	<script type="text/javascript" src='keyword.js'></script>
+	<script type="text/javascript" src='moulem.js'></script>
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
