--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
               
 				<div class="hSiteLine"><!--第二行-->
 					<a href="https://web.umeng.com/" class="hSite" target="_blank">
-						<img src="ico/umeng.ico"/>
+						<img src="ico/ymtongji.ico"/>
 						<span class="hSiteName">友盟+</span>
 					</a> 
 					<a href="https://007.qq.com/" class="hSite" target="_blank">
