--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
 		<dl id="hSiteNav">
-			<dd class="currentHNav hNav hZongheBtn">综合</dd>
+			<dd class="currentHNav hNav hZongheBtn">常用</dd>
 			<dd class="hNav hGouwuBtn">法律</dd>
 			<dd class="hNav hZixunBtn">趣站</dd>
 			<dd class="hNav hShejiaoBtn">素材</dd>
@@ -645,10 +645,10 @@
 				</div>
               
 				<div class="hSiteLine"><!--第二行-->
-					<a href="https://web.umeng.com/" class="hSite" target="_blank">
-						<img src="ico/ymtongji.ico"/>
-						<span class="hSiteName">友盟+</span>
-					</a> 
+					<a href="https://ziyuan.baidu.com/" class="hSite" target="_blank" >
+						<img src="ico/baidu.ico"/>
+						<span class="hSiteName">百度站长</span>
+					</a>
 					<a href="https://007.qq.com/" class="hSite" target="_blank">
 						<img src="ico/fsq.ico"/>
 						<span class="hSiteName">腾讯防水墙</span>
