--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 						<span class="hSiteName">叮当设计</span>
 					</a>
 					<a href="http://streetwill.co/" class="hSite" target="_blank">
-						<img src="ico/streetwill.ico"/>
+						<img src="ico/streetwill.png"/>
 						<span class="hSiteName">streetwill</span>
 					</a>
 					<a href="http://mazwai.com/" class="hSite" target="_blank">
