--- a/index.html
+++ b/index.html
@@ -364,11 +364,11 @@
 					</a>
 					<a href="https://visualhunt.com/" class="hSite" target="_blank">
 						<img src="ico/visualhunt.ico"/>
-						<span class="hSiteName">visualhunt</span>
+						<span class="hSiteName">Visualhunt</span>
 					</a>
 					<a href="https://gratisography.com/" class="hSite" target="_blank">
 						<img src="ico/gratis.ico"/>
-						<span class="hSiteName">gratisography</span>
+						<span class="hSiteName">Gratisography</span>
 					</a>
 
 				</div>
@@ -387,7 +387,7 @@
 					</a>
 					<a href="https://cn.freeimages.com/" class="hSite" target="_blank">
 						<img src="ico/freepic.ico"/>
-						<span class="hSiteName">freeimages</span>
+						<span class="hSiteName">Freeimages</span>
 					</a>
 					<a href="http://www.polayoutu.com/collections" class="hSite" target="_blank">
 						<img src="ico/pola.png"/>
@@ -395,7 +395,7 @@
 					</a>
 					<a href="https://picjumbo.com/?darkmode" class="hSite" target="_blank">
 						<img src="favicon.ico"/>
-						<span class="hSiteName">picjumbo</span>
+						<span class="hSiteName">Picjumbo</span>
 					</a>
 				</div>
 				<div class="hSiteLine"><!--第四行-->
@@ -405,7 +405,7 @@
 					</a>
 					<a href="http://streetwill.co/" class="hSite" target="_blank">
 						<img src="ico/streetwill.png"/>
-						<span class="hSiteName">streetwill</span>
+						<span class="hSiteName">Streetwill</span>
 					</a>
 					<a href="http://mazwai.com/" class="hSite" target="_blank">
 						<img src="ico/maz.ico"/>
