--- a/index.html
+++ b/index.html
@@ -162,17 +162,17 @@
 						<img src="ico/bilibili.ico"/>
 						<span class="hSiteName">哔哩哔哩</span>
 					</a>	
-					<a href="https://www.juexiaotime.com/" class="hSite" target="_blank" >
-						<img src="ico/juexiao.ico"/>
-						<span class="hSiteName">觉晓法考</span>
+					<a href="https://https://note.wps.cn/" class="hSite" target="_blank" >
+						<img src="ico/wpsnote.ico"/>
+						<span class="hSiteName">WPS便签</span>
 					</a>
-					<a href="https://www.zhumavip.com/" class="hSite" target="_blank" >
-						<img src="ico/zhuma.ico"/>
-						<span class="hSiteName">竹马法考</span>
+					<a href="https://www.pypypy.cn/" class="hSite" target="_blank" >
+						<img src="ico/pypypy.ico"/>
+						<span class="hSiteName">风向编程</span>
 					</a>
-					<a href="http://www.houdask.com" class="hSite" target="_blank">
-						<img src="ico/houda.ico"/>
-						<span class="hSiteName">厚大法考</span>
+					<a href="https://console.dnspod.cn/dns/list" class="hSite" target="_blank">
+						<img src="ico/dnspod.ico"/>
+						<span class="hSiteName">DNSPod</span>
 					</a>
 				</div>
 				<div class="hSiteLine"><!--第四行-->
