--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 						<img src="ico/duitang.ico"/>
 						<span class="hSiteName">堆糖</span>
 					</a>	
-					<a href="https://meiriyiwen.com/" class="hSite" target="_blank">
+					<a href="https://meiriyiwen.com/random" class="hSite" target="_blank">
 						<img src="ico/mryw.ico"/>
 						<span class="hSiteName">每日一文</span>
 					</a>		
