--- a/index.html
+++ b/index.html
@@ -818,6 +818,10 @@
 						<img src="ico/wjx.ico"/>
 						<span class="hSiteName">问卷星</span>
 					</a>	
+					<a href="https://note.wps.cn/" class="hSite" target="_blank" >
+						<img src="ico/wpsnote.ico"/>
+						<span class="hSiteName">WPS便签</span>
+					</a>
 				</div>
 				<div class="hSiteLine"><!--第三行-->
 					
