--- a/index.html
+++ b/index.html
@@ -834,7 +834,9 @@
 
  </div>
 </div>
-<script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1278244198&web_id=1278244198"></script>
+<div class="footer">
+	<script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1278244198&web_id=1278244198"></script>
+	</div>
 </body>
 </html>
 
