--- a/index.html
+++ b/index.html
@@ -287,9 +287,9 @@
 						<img src="ico/juzikong.ico"/>
 						<span class="hSiteName">句子控</span>
 					</a>	
-					<a href="https://wenzikong.co/" class="hSite" target="_blank">
-						<img src="ico/blog.ico"/>
-						<span class="hSiteName">文字控</span>
+					<a href="https://bypic.cn/" class="hSite" target="_blank">
+						<img src="ico/bypic.ico"/>
+						<span class="hSiteName">定格网</span>
 					</a>	
 				</div>
 				<div class="hSiteLine"><!--第二行-->
