--- a/index.html
+++ b/index.html
@@ -826,6 +826,18 @@
 						<img src="ico/wpsnote.ico"/>
 						<span class="hSiteName">WPS便签</span>
 					</a>
+					<a href="https://cowtransfer.com/" class="hSite" target="_blank" >
+						<img src="ico/cowtransfer.ico"/>
+						<span class="hSiteName">奶牛快传</span>
+					</a>
+					<a href="https://send.firefox.com/" class="hSite" target="_blank" >
+						<img src="ico/firefox.ico"/>
+						<span class="hSiteName">FireFox Send</span>
+					</a>
+					<a href="https://wetransfer.com/" class="hSite" target="_blank" >
+						<img src="ico/wetransfer.ico"/>
+						<span class="hSiteName">Wetransfer</span>
+					</a>
 				</div>
 				<div class="hSiteLine"><!--第三行-->
 					
