--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
 						<span class="hSiteName">WPS便签</span>
 					</a>
 					<a href="https://cowtransfer.com/" class="hSite" target="_blank" >
-						<img src="ico/cowtransfer.ico"/>
+						<img src="ico/cowtransfer.png"/>
 						<span class="hSiteName">奶牛快传</span>
 					</a>
 					<a href="https://send.firefox.com/" class="hSite" target="_blank" >
