--- a/index.html
+++ b/index.html
@@ -840,7 +840,11 @@
 					</a>
 				</div>
 				<div class="hSiteLine"><!--第三行-->
-					
+					<a href="https://www.wenshushu.cn/" class="hSite" target="_blank" >
+						<img src="ico/wenshushu.ico"/>
+						<span class="hSiteName">文叔叔</span>
+					</a>
+
 				</div>
 				<div class="hSiteLine"><!--第四行-->
 				
