--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
 						<img src="ico/vqq.ico"/>
 						<span class="hSiteName">腾讯视频</span>
 					</a>	
-					<a href="https://v.luziyang.cn/" class="hSite" target="_blank" >
-						<img src="ico/vluziyang.ico"/>
-						<span class="hSiteName">文件管理</span>
-					</a>
+					<a href="https://www.yuque.com/dashboard" class="hSite" target="_blank">
+						<img src="ico/yuque.png"/>
+						<span class="hSiteName">语雀</span>
+					</a> 
 					<a href="https://music.163.com" class="hSite" target="_blank" >
 						<img src="ico/163music.ico"/>
 						<span class="hSiteName">网易云音乐</span>
@@ -655,10 +655,6 @@
 					<a href="https://www.weiyun.com/" class="hSite" target="_blank" >
 						<img src="ico/weiyun.ico"/>
 						<span class="hSiteName">微云</span>
-					</a>
-					<a href="https://yun.luziyang.cn/" class="hSite" target="_blank" >
-						<img src="ico/yun.ico"/>
-						<span class="hSiteName">私有云</span>
 					</a>
 					<a href="https://moeclub.org/directlink" class="hSite" target="_blank" >
 						<img src="ico/zhilian.ico"/>
