新增：档案馆

--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 						<img src="ico/weibo.ico"/>
 						<span class="hSiteName">微博</span>
 					</a>
-					<a href="https://ziyuan.baidu.com/" class="hSite" target="_blank" >
-						<img src="ico/baidu.ico"/>
-						<span class="hSiteName">百度站长</span>
-					</a>
+					<a href="https://vip.luziyang.cn/" class="hSite" target="_blank">
+						<img src="ico/viplu.ico"/>
+						<span class="hSiteName">档案馆</span>
+					</a> 
 				</div>
 				
 				<div class="hSiteLine"><!--第三行-->
@@ -330,6 +330,10 @@
 					<a href="https://cqp.cc/" class="hSite" target="_blank">
 						<img src="ico/cqp.png"/>
 						<span class="hSiteName">酷Q机器人</span>
+					</a> 
+					<a href="https://vip.luziyang.cn/" class="hSite" target="_blank">
+						<img src="ico/viplu.ico"/>
+						<span class="hSiteName">档案馆</span>
 					</a> 
 				</div>
 				<div class="hSiteLine"><!--第四行-->
