--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 						<img src="ico/weibo.ico"/>
 						<span class="hSiteName">微博</span>
 					</a>
-					<a href="https://vip.luziyang.cn/" class="hSite" target="_blank">
+					<a href="https://v.luziyang.cn/" class="hSite" target="_blank">
 						<img src="ico/viplu.ico"/>
 						<span class="hSiteName">档案馆</span>
 					</a> 
@@ -331,7 +331,7 @@
 						<img src="ico/cqp.png"/>
 						<span class="hSiteName">酷Q机器人</span>
 					</a> 
-					<a href="https://vip.luziyang.cn/" class="hSite" target="_blank">
+					<a href="https://v.luziyang.cn/" class="hSite" target="_blank">
 						<img src="ico/viplu.ico"/>
 						<span class="hSiteName">档案馆</span>
 					</a> 
