--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 					</a>
 				</div>
 				<div class="hSiteLine"><!--第二行-->
-					<a href="https://qzone.qq.com/" class="hSite" target="_blank">
-						<img src="ico/qzone.ico"/>
-						<span class="hSiteName">QQ空间</span>
+					<a href="https://mail.sina.com.cn/" class="hSite" target="_blank">
+						<img src="ico/sinamail.ico"/>
+						<span class="hSiteName">新浪邮箱</span>
 					</a>	
 					<a href="https://v.qq.com/" class="hSite" target="_blank">
 						<img src="ico/vqq.ico"/>
