--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 						<img src="ico/sinamail.ico"/>
 						<span class="hSiteName">新浪邮箱</span>
 					</a>	
-					<a href="https://v.qq.com/" class="hSite" target="_blank">
-						<img src="ico/vqq.ico"/>
-						<span class="hSiteName">腾讯视频</span>
+					<a href="https://docs.qq.com/" class="hSite" target="_blank">
+						<img src="ico/qqdoc.ico"/>
+						<span class="hSiteName">腾讯文档</span>
 					</a>	
 					<a href="https://www.yuque.com/dashboard" class="hSite" target="_blank">
 						<img src="ico/yuque.png"/>
