--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 			<div class="hSiteBox hZonghe">
 				<div class="hSiteLine"><!--第一行-->
 
-					<a href="https://mail.dehenglaw.com/webmail/cgi/index.cgi" class="hSite" target="_blank" >
-						<img src="ico/dhl.png"/>
-						<span class="hSiteName">德恒邮箱</span>
+					<a href="http://60.28.163.201:8091/lawyer/home.html" class="hSite" target="_blank" >
+						<img src="ico/fayuan.ico"/>
+						<span class="hSiteName">天津律管</span>
 					</a>
 					<a href="http://mail.tju.edu.cn/" class="hSite" target="_blank">
 						<img src="ico/tju.ico"/>
@@ -170,9 +170,10 @@
 						<img src="ico/pypypy.ico"/>
 						<span class="hSiteName">风向编程</span>
 					</a>
-					<a href="http://oa.dehenglaw.com/system/login.aspx" class="hSite" target="_blank">
-						<img src="ico/dhl.png"/>
-						<span class="hSiteName">德恒OA</span>
+
+					<a href="http://tianjin.lsfwpt.cn/login" class="hSite" target="_blank">
+						<img src="ico/lawfirm.ico"/>
+						<span class="hSiteName">天津律协</span>
 					</a>
 				</div>
 				<div class="hSiteLine"><!--第四行-->
