--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			                var wordCheck = document.getElementsByClassName("textb")[0];
 			                
 			                if (wordCheck.value.length <= 0) {
-			                    window.open("https://luziyang.cn");//推荐网站链接提交
+			                    window.open("https://blog.luziyang.cn");//推荐网站链接提交
 			                    event.preventDefault()
 			                    return false;
 			                } 
