--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			<dd class="hNav hZixunBtn">趣站</dd>
 			<dd class="hNav hShejiaoBtn">素材</dd>
 			<dd class="hNav hYingyinBtn">学习</dd>
-			<dd class="hNav hShenghuoBtn">生活</dd>
+			<dd class="hNav hShenghuoBtn">娱乐</dd>
 			<dd class="hNav hGongjuBtn">工具</dd>
 			<dd class="hNav hItsiteBtn">站长</dd>
 			<dd class="hNav hQuzhanBtn">办公</dd>
