--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
 		<dl id="hSiteNav">
-			<dd class="currentHNav hNav hZongheBtn">常用</dd>
+			<dd class="currentHNav hNav hZongheBtn">综合</dd>
 			<dd class="hNav hGouwuBtn">法律</dd>
 			<dd class="hNav hZixunBtn">趣站</dd>
 			<dd class="hNav hShejiaoBtn">素材</dd>
