--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 </head>
+<style>
+ .yiyan {
+    position: fixed;
+    width: 1000px;
+    left: 50%;
+    top: 50%;
+    bottom: 0px;
+    margin-left: -500px;
+ }
+
+
+</style>
 <body>
 
 	<div id="bg" style="overflow: hidden;">
@@ -851,13 +863,13 @@
 <!--以下勿删除-->
 
  </div>
+
+<div class="yiyan"><p class="text-lead text-white" id="hitokoto"></p></div>
 </div>
 
 <div class="footer">
 	<script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1278244198&web_id=1278244198"></script>
 	</div>
-
-<div><p class="text-lead text-white" id="hitokoto"></p></div>
 <script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
 </body>
 </html>
