--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </head>
 <style>
  .yiyan {
-    position: fixed;
+    position: absolute;
     width: 1000px;
+    text-align: center;
     left: 50%;
-    top: 50%;
-    bottom: 0px;
+    bottom: 20%;
     margin-left: -500px;
  }
 
@@ -864,10 +864,10 @@
 
  </div>
 </div>
-<div class="yiyan"><p class="text-lead text-white" id="hitokoto"></p></div>
 <div class="footer">
 	<script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1278244198&web_id=1278244198"></script>
-	</div>
+</div>
+<div class="yiyan">"<p class="text-lead text-white" id="hitokoto"></p>"</div>
 <script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
 </body>
 </html>
