--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     width: 1000px;
     text-align: center;
     left: 50%;
-    bottom: 20%;
+    bottom: 0;
     margin-left: -500px;
  }
 
@@ -30,6 +30,7 @@
 	<div id="bg" style="overflow: hidden;">
 		<div id='bigBox'>
              <div id='divimg' style="text-align: center;margin:0 auto">
+             <div class="yiyan"><p class="text-lead text-white" id="hitokoto"></p></div>
           </div>
 
 
@@ -867,7 +868,6 @@
 <div class="footer">
 	<script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1278244198&web_id=1278244198"></script>
 </div>
-<div class="yiyan">"<p class="text-lead text-white" id="hitokoto"></p>"</div>
 <script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
 </body>
 </html>
