--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
 <style>
  .yiyan {
     position: absolute;
-    width: 1000px;
+    width: 500px;
     text-align: center;
     left: 50%;
-    bottom: 0;
-    margin-left: -500px;
+    bottom: -30px;
+    font-size: 11px;
+    line-height: 2.5;
+    -webkit-text-emphasis-style: sesame;
+    margin-left: -250px;
+    letter-spacing: 2px;
  }
 
 
