--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <body>
 
 	<div id="bg" style="overflow: hidden;">
+		<div class="tianqi" id="he-plugin-simple"></div>
 		<div id='bigBox'>
              <div id='divimg' style="text-align: center;margin:0 auto">
              <div class="yiyan"><p class="text-lead text-white" id="hitokoto"></p></div>
@@ -873,6 +874,30 @@
 	<script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1278244198&web_id=1278244198"></script>
 </div>
 <script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
+<script>
+WIDGET = {
+  CONFIG: {
+    "modules": "12304",
+    "background": 2,
+    "tmpColor": "4A4A4A",
+    "tmpSize": 16,
+    "cityColor": "4A4A4A",
+    "citySize": 16,
+    "aqiSize": 16,
+    "weatherIconSize": 24,
+    "alertIconSize": 18,
+    "padding": "10px 10px 10px 10px",
+    "shadow": "1",
+    "language": "auto",
+    "borderRadius": 5,
+    "fixed": "false",
+    "vertical": "middle",
+    "horizontal": "center",
+    "key": "23b937e483d54d33b5e3cd6bb6c0999e"
+  }
+}
+</script>
+<script src="https://widget.heweather.net/simple/static/js/he-simple-common.js?v=1.1"></script>
 </body>
 </html>
 
