--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
     margin-left: -250px;
     letter-spacing: 2px;
  }
-
+.tianqi {
+	text-align: left;
+}
 
 </style>
 <body>
 
 	<div id="bg" style="overflow: hidden;">
-		<div class="tianqi" id="he-plugin-simple"></div>
+		<div class="tianqi"><div id="he-plugin-simple"></div></div>
 		<div id='bigBox'>
              <div id='divimg' style="text-align: center;margin:0 auto">
              <div class="yiyan"><p class="text-lead text-white" id="hitokoto"></p></div>
