--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     letter-spacing: 2px;
  }
 .tianqi {
-	text-align: left;
+	width: 500px;
+    position: absolute;
+    margin-left: -500px;
+    left: 50%;
+    top: 20px;
 }
 
 </style>
@@ -894,8 +898,8 @@ WIDGET = {
     "borderRadius": 5,
     "fixed": "false",
     "vertical": "middle",
-    "horizontal": "center",
-    "key": "d61e614a599e4a2ba852342bd25fb08b"
+    "horizontal": "left",
+    "key": "afa1538004424c8d9d12b7d3775ec1c6"
   }
 }
 </script>
