--- a/index.html
+++ b/index.html
@@ -925,10 +925,24 @@ WIDGET = {
 </script>
 <script src="https://widget.heweather.net/simple/static/js/he-simple-common.js?v=1.1"></script>
 <script type="text/javascript">
-	 var url = 'https://v1.alapi.cn/api/shici';
-        $.getJSON(url,function(data){
+var data = "type=all";
+
+var xhr = new XMLHttpRequest();
+xhr.withCredentials = true;
+
+xhr.addEventListener("readystatechange", function () {
+  if (this.readyState === 4) {
+    console.log(this.responseText);
+  }
+});
+
+xhr.open("POST", "https://v1.alapi.cn/api/shici");
+xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+
+xhr.send(data);
+
+
             $('#shici').append('<p>'+data.content+'</p>');          
-        });
 </script>
 </body>
 </html>
