--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
 
 }
 
+.rili {
+	width: 500px;
+    position: absolute;
+    margin-right: -500px;
+    right: 50%;
+    top: 20px;
+}
+
 </style>
 <body>
 
