--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
     text-align: center;
 }
 #calendar .yearMon{
-	background-color: #ddd;
-	padding: 5px 0;
+    background-color: #5192ff;
+    padding: 5px 0;
+    color: #fff;
 }
 
 #calendar .date{
