--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 					</a> 
 					<a href="https://mp.weixin.qq.com/" class="hSite" target="_blank" >
 						<img src="ico/wxmp.ico"/>
-						<span class="hSiteName">微信公众平台</span>
+						<span class="hSiteName">公众号</span>
 					</a>
 					<a href="https://weibo.com/" class="hSite" target="_blank" >
 						<img src="ico/weibo.ico"/>
