--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     bottom: -30px;
     font-size: 11px;
     line-height: 2.5;
-    -webkit-text-emphasis-style: sesame;
     margin-left: -250px;
     letter-spacing: 2px;
  }
@@ -400,6 +399,9 @@
 					<a href="https://v.luziyang.cn/" class="hSite" target="_blank">
 						<img src="ico/viplu.ico"/>
 						<span class="hSiteName">档案馆</span>
+					</a> 
+					<a href="https://bing.lylares.com/" class="hSite" target="_blank">
+						<img src="ico/bing.png">必应壁纸</span>
 					</a> 
 				</div>
 				<div class="hSiteLine"><!--第四行-->
