--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 						<span class="hSiteName">档案馆</span>
 					</a> 
 					<a href="https://bing.lylares.com/" class="hSite" target="_blank">
-						<img src="ico/bing.png">必应壁纸</span>
+						<img src="ico/bing.png"/>必应壁纸</span>
 					</a> 
 				</div>
 				<div class="hSiteLine"><!--第四行-->
