--- a/index.html
+++ b/index.html
@@ -128,7 +128,10 @@
 									<img class="scImg" src="images/searchChoice/scgoogle.png">
 									<span class="scName">谷歌</span>
 								</div>
-
+								<div class="scSmallBox">
+									<img class="scImg" src="images/searchChoice/scmovie.png">
+									<span class="scName">搜影视</span>
+								</div>
 					
 
 								
