--- a/index.html
+++ b/index.html
@@ -757,6 +757,10 @@
 						<img src="ico/ppcc.ico"/>
 						<span class="hSiteName">皮皮时光机</span>
 					</a>	
+					<a href="https://smallpdf.com/" class="hSite" target="_blank" >
+						<img src="ico/smallpdf.png"/>
+						<span class="hSiteName">SmallPDF</span>
+					</a>	
 				</div>
             
 				
